--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Boilerplate code to create a react app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --mode development"
   },
   "keywords": [
     "react"
